<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />


    <TextView
        android:id="@+id/textPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_of_pax"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSvc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/svc"
            android:textOff="@string/no_svc"
            android:textOn="@string/svc" />

        <ToggleButton
            android:id="@+id/tbGst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gst"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />

    </LinearLayout>

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rgCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/rgPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/split"
            app:backgroundTint="#A39696" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="#CDBFBF"
            android:text="@string/reset"
            app:backgroundTint="#A39696" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalbill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/totalsplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" />


</LinearLayout>